src/components/App.css
@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
.app {
  padding: 50px;
  font-size: 28px;
  font-family: "Poppins", sans-serif;
}
.app__actor {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 55px 35px;
}
.skills {
  display: flex;
  padding: 25px;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-size: 22px;
}

.mode {
  position: absolute;
  right: 0;
  top: 0;
  padding: 10px;
}

.mode__buttom {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 10px;
}

.badge {
  margin-left: 7px;
}

.css-1j529ay {
  background: #2a4365 !important;
  text-align: center;
}

.poppins {
  font-family: "Poppins", sans-serif;
}

.skills__container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

@media screen and (max-width: 600px) {
  .app {
    padding: 16px;
  }
  .app__actor {
    width: 90vw;
  }
  .chakra-fade {
    font-size: 14px;
  }
  .app__actor {
    padding: 75px 17px;
    font-size: 24px;
  }
  .css-1j529ay {
    padding: 20px 9px;
  }
  .css-t02unw {
    margin-right: 1rem;
  }
}

